[package]
name = "adze-engine"
version = "0.1.0"
authors = ["Grayden Hormes <graydenhormes@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
egui = "0.15.0"
egui_glow = "0.15.0"

glow = "0.11"
glutin = "0.27"